feat(product): 직접 등록 service 구현 완료